# SagemakerStudioCDK

./: .gitignore  README.md  app.py  cdk.json  pyproject.toml  sample.env  setup.py  temp.ipynb
enable_projects_fn/: enable_projects.py  enable_projects_cr.py
populate_git_fn/: populate_from_git.py  requirements.txt
service_catalog/: service_catalog_construct.py
sm_domain/: sm_domain_stack.py  vpc_construct.py
sm_user/: service_catalog_construct.py  sm_domain_stack.py  sm_studio_user_lambda_construct.py  sm_user_stack.py  vpc_construct.py
